Pagination: Remove fixed width in favor of min-width, to prevent wrapping on large numbers
Fixes https://github.com/WordPress/wporg-theme-directory/issues/95

--- a/source/wp-content/themes/wporg-parent-2021/sass/blocks/_query-pagination.scss
+++ b/source/wp-content/themes/wporg-parent-2021/sass/blocks/_query-pagination.scss
@@ -36,7 +36,7 @@
 		> * {
 			display: block;
 			padding: calc((7 / 16) * 1em) 0;
-			width: 1.875em;
+			min-width: 1.875em;
 
 			+ * {
 				margin-left: 0.5em;
